@@ -1,3 +1,8 @@
+2004-02-24 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b54
+
+	* Bugfix: #869311, fitToWindow did not work correct.
+	  Thanks for help and patch to Jay Rossiter.
+
 2004-02-24 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b53
 
 	* Bugfix: Added missing echo for GeekLog Header.
